--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -67,7 +67,7 @@
                 {% endif %}
                 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
                 <div class="list-group">
                     <h5 class="list-group-item list-group-item-dark">Your Activity</h5>
                     <a class="list-group-item list-group-item-action" 
