--- a/templates/space/product/update.html
+++ b/templates/space/product/update.html
@@ -15,7 +15,7 @@
     
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
                 <div>
                     <h5 class="list-group-item bg-secondary text-white">Update Product</h5>
                     {% if tab == 'images' %}
