--- a/templates/account/manage/update.html
+++ b/templates/account/manage/update.html
@@ -53,7 +53,7 @@
                         <button class="btn btn-primary btn-block" type="submit">Update</button>
                     </form>
                     <br>
-                    <a href="/account/" class="list-group-item list-group-item-action">Back to profile</a>
+                    <a href="/account/" class="list-group-item list-group-item-action mb-3">Back to profile</a>
                 </div>
             </div>
         </div>
