--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <div class="extra_contents">
     	<div id="site-nav-bar">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 
                 <a class="navbar-brand" href="/" id="sakkhat-brand-link">
                     <img src="{% static 'res/sakkhat_black.png' %}">
@@ -102,16 +102,16 @@
     <div class="footer-block">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 list-group">
+                <div class="col-md-4 list-group mb-3">
                    <div><a class="col" href="/page/about/">About</a></div>
                    <div><a class="col" href="/page/feedback/">Give us feedback</a></div>
                 </div>
-                <div class="col-md-4 list-group">
+                <div class="col-md-4 list-group mb-3">
                     <div><a class="col" href="https://github.com/sakkhat/"><i class="fa fa-github"> Github</i></a></div>
                     <div><a class="col" href="https://linkedin.com/company/sakkhat/"><i class="fa fa-linkedin-square"> Linkedin</i></a></div>
                    <div><a class="col" href="https://facebook.com/sakkhat.inc/"><i class="fa fa-facebook-square"> Facebook</i></a></div>
                 </div>
-                <div class="col-md-4 list-group">
+                <div class="col-md-4 list-group mb-3">
                    <div><a class="col" href="/page/terms/">Terms of Service</a></div>
                    <div><a class="col" href="/page/privacy-policy/">Privacy Policy</a></div>
                    <div><a class="col" href="/page/cookie/">Cookie</a></div>
