--- a/templates/home/pages/about.html
+++ b/templates/home/pages/about.html
@@ -3,32 +3,11 @@
 
 {% block extra_head %}
 	<title>About Sakkhat</title>
-	<style type="text/css">
-		body {
-			background-color: rgb(10,10,10);
-		}
-		.block-article{
-			height: 100%; width: 100%; margin: 0px;
-			color: white; text-align: center; padding: 10px;
-		}
-		.block-media {
-			background-color: white; height: 100%;
-		}
-		.block-media img {
-			width: 80%; height: 80%;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/home/page/about.css' %}">
 {% endblock %}
 
 
 {% block extra_content %}
-	<!-- <div class="background"></div>
-	<div class="d-flex justify-content-center">
-		<div class="col-md-8 block">
-			<img class="mx-auto d-block" src="{% static 'res/vector/seller.svg'%}">
-			<article>Sakkhat is providing a better platform for micro sellers. A meeting place for self service providers and their customers.</article>
-		</div>
-	</div> -->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-6 block-article">
