--- a/templates/home/pages/about.html
+++ b/templates/home/pages/about.html
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div class="col-md-12 block-text">
 				<h6 class="display-4">User Account</h6>
-				<article class="lead">After creating an account user can access all posts and spaces and can filtering them (Trening, Recent, Category), react on posts, pin a post, add a space to favorite. All these activities will be addressed to user account activity panel, where the user can get all the activity record.</article>
+				<article class="lead">After creating an account user can access all posts and spaces and can filter them (Trening, Recent, Category), react on posts, pin a post, add a space to favorite. All these activities will be addressed to user account activity panel, where the user can get all the activity record.</article>
 			</div>
 		</div>
 	</div>
