--- a/templates/space/product/create.html
+++ b/templates/space/product/create.html
@@ -76,7 +76,7 @@
                     <input type="submit" value="Create" class="btn btn-success btn-block">
                 </form>
             </div>
-            <div class="col-md-6 view mt-3">
+            <div class="col-md-6 view mt-3 mb-5">
                 <p class="text-white text-center display-4">Express your own products</p>
                 <img src="{% static 'res/vector/shopper-with-bags.svg' %}">
             </div>
@@ -88,5 +88,4 @@
 
 {% block extra_script %}
     <script type="text/javascript" src="{% static 'js/space/product/create.js'%}"></script>
-
 {% endblock %}
