--- a/staticfiles/css/space/manage/create.css
+++ b/staticfiles/css/space/manage/create.css
@@ -13,3 +13,7 @@ body,html {
 	width: 50%; height: 50%; overflow: hidden;
 	margin: auto; display: flex; align-self: center;
 }
+.image-preview {
+	width: 50px; height: 50px;
+	margin: 0px 20px;
+}
