--- a/templates/space/manage/create.html
+++ b/templates/space/manage/create.html
@@ -11,23 +11,51 @@
 {% block extra_content %}
 	<div class="container-fluid">
         <div class="row">
-            <div class="col-md-6 list-group-item mt-2">
-                <h5>Create a space</h5>
-                <form method="POST" class="space-create-form">
-                	{% csrf_token %}
-                    {{ form.name.label }}
-                    {% if form.errors.name %}
-                        <strong class="list-group-item list-group-item-danger">{{ form.errors.name}}</strong>
-                    {% endif %}
-                    {{ form.name }}
+            <div class="col-md-6">
+                <div class="list-group-item">
+                    <h5>Create a space</h5>
+                    <form method="POST" class="space-create-form" enctype="multipart/form-data">
+                        {% csrf_token %}
 
-                    {{ form.description.label}}
-                    {{ form.description}}
-                    <input type="submit" value="Create" class="btn btn-success btn-block">
-                </form>
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error|escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                        
+                        {{ form.name.label }}
+                        {{ form.name }}
+
+                        {{ form.display_name.label}}
+                        {{ form.display_name}}
+
+                        <div class="list-group-item">
+                            <img src="{% static 'res/vector/logo_bw.svg' %}" class="image-preview" 
+                                id="logo-view">
+                            <div class="custom-file">
+                                {{ form.logo }}
+                                <label for="id_logo" class="custom-file-label">Select Logo</label>
+                            </div>
+                        </div>  
+
+                        {{ form.description.label}}
+                        {{ form.description}}
+
+                        <input type="submit" value="Create" class="btn btn-success btn-block">
+                    </form>
+                </div>
             </div>
             <br>
-            <div class="col-md-6 view mt-3">
+            <div class="col-md-6 view mt-3 mb-5">
                 <img src="{% static 'res/vector/trade.svg' %}">
                 <p class="text-white text-center display-4 mt-3">Your space, your management</p>
             </div>
@@ -38,5 +66,5 @@
 
 
 {% block extra_script %}
-
+    <script type="text/javascript" src="{% static 'js/space/product/create.js'%}"></script>
 {% endblock %}
