--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -55,7 +55,7 @@
                     <h6 class="activity">Favorite <span class="activity-counter">{{status.total_favorite}}</span></h6>
                     <h6 class="activity">Pinned <span class="activity-counter">{{status.total_pinned}}</span></h6>
                     <h6 class="activity">Reacts <span class="activity-counter">{{status|total_reacts}}</span></h6>
-                    <h6 class="activity float-none">Rating <span class="activity-counter">{{status.rating}}</span></h6>
+                    <h6 class="activity">Rating <span class="activity-counter">{{status.rating}}</span></h6>
                 </div>
                 <div id="react-progress-block">
                 </div>
