--- a/staticfiles/css/generic/space-box.css
+++ b/staticfiles/css/generic/space-box.css
@@ -1,3 +1,28 @@
-.space-box {
-	width: 300px;
+.activity {
+	font-size: 12px; color: #EEEEEE; float: left; padding: 3px 5px;
+}
+.activity-counter {
+	font-weight: bold; color: white;
+}
+.space-name {
+	font-size: 17px; font-weight: bold; margin: 0px;
+	padding: 8px 3px; display: block;
+	text-align: center;
+}
+.space-logo {
+	width: 50px; height: 50px; background-color: white;
+	border-radius: 50%; border: 3px solid lightgray;
+}
+.card {
+	height: 180px; width: 300px;
+}
+.card-img {
+	height: 100%; object-fit: cover;
+	padding: 0px; width: 100%;
+}
+.card-img-overlay {
+	padding: 5px; background-color: rgba(0,0,0,0.8);
+}
+.space-link {
+	clear: left; justify-content: center; display: flex;
 }
