--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
                 <div class="collapse navbar-collapse" id="navb">
                     <form class="form-inline my-2 my-lg-0 mr-auto" method="GET" action="/search/">
-                        <input class="form-control mr-sm-2" type="text" name="query"  placeholder="ex. T-Shirt">
+                        <input class="form-control mr-sm-2" type="text" name="query"  placeholder="Polo T-shirt">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav">
