--- a/templates/home/manage/index.html
+++ b/templates/home/manage/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/card.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/space-box.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/generic/container.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/generic/slick-slider.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/home/manage/index.css'%}">
 {% endblock %}
@@ -215,10 +216,9 @@
         </div>
         <br>
     </div>
-
-    <div class="bg-white row-container">
-        <h4 class="text-center row-header">Top Spaces</h4>
-        <div class="container-fluid">
+    <div class="container-fluid">
+        <div class="bg-white row-container">
+            <h4 class="text-center row-header">Top Spaces</h4>
             <div class="row justify-content-center">
                 {% for item in top_spaces %}
                     <div class="col-auto mb-3">
