--- a/staticfiles/css/space/manage/index.css
+++ b/staticfiles/css/space/manage/index.css
@@ -7,7 +7,7 @@
 	object-fit: cover;
 }
 #space-logo {
-	width: 120px; height: 120px;
+	width: 120px; height: 120px; object-fit: cover;
 	border-radius: 50%; border: 3px solid darkgray;
 }
 #display-name {
