--- a/templates/home/pages/cookie.html
+++ b/templates/home/pages/cookie.html
@@ -7,7 +7,7 @@
 
 
 {% block extra_content %}
-	<h6 class="display-3 text-center">Will be updated</h6>
+	<p>Sakkhat uses cookies to make interactions with our service easy and meaningful. We use cookies (and similar technologies, like HTML5 localStorage) to keep you logged in, remember your preferences, and provide information for future development of Sakkhat. For security reasons, we use cookies to identify a device. By using our website, you agree that we can place these types of cookies on your computer or device. If you </p>
 {% endblock %}
 
 	
