--- a/templates/home/pages/privacy_policy.html
+++ b/templates/home/pages/privacy_policy.html
@@ -3,11 +3,28 @@
 
 {% block extra_head %}
 	<title>Privacy Policy - Sakkhat</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/home/page/privacy-policy.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/generic/article.css'%}">
 {% endblock %}
 
 
 {% block extra_content %}
-	<h5 class="display-3 text-center">Will be updated</h5>
+	<h2 class="text-center">Privacy Policy</h2>
+	<h4 class="mb-3">What information Sakkhat collects and why</h4>
+	<ol>
+		<li>
+			<h5 class="title-1">Categories of personal information</h5><p class="article-body">"Users Personal Information" is any personal information about one of our users which could, alone or together with other information, personally identify them. Information such as a user name and password, an email address, phone number, a real name, gender, and a photograph are example of "User Personal Information". User Personal Information includes Personal Data as defined in the General Data Protection Regulation."Technical Information’ may include information we collect from website browsers, such as web server logs, or other log information, such as User session or activity logs. Technical Information may be connected to User Personal Information such as a username or an email address, or to other potentially personally-identifying information like Internet Protocol (IP) addresses.User Personal Information does not include aggregated, non-personally identifying information. We may use aggregated non-personally identifying information to operate, analyze, improve, and optimize our website and service.</p>
+		</li>
+		<li>
+			<h5 class="title-1">Information from users with accounts</h5><p class="article-body">If you <a href="/account/signup/">create an account</a>, we require some basic information at the time of account creation. You will create your own user name and password, and we will ask you for a valid email address, your phone number, gender and your name.</p>
+		</li>
+		<li>
+			<h5 class="title-1">Information from website browsers</h5><p class="article-body">If you're just browsing the website, we collect the same basic information that most websites collect. We use common internet technologies, such as cookies and web server logs, to collect Technical Information. This is stuff we collect from everybody, whether they have an account or not.</p>
+		</li>
+		<li>
+			<h5 class="title-1">Tracking and analytics</h5><p class="article-body">We use a number of third party analytics and service providers to help us evaluate our users' use of Sakkhat; compile statistical reports on activity; and improve our content and website performance. We only use these third party analytics providers on certain areas of our website, and all of them have signed data protection agreements with us that limit the type of personal information they can collect and the purpose for which they can process the information. In addition, we use our own internal analytics software to provide features and improve our content and performance.</p>
+		</li>
+	</ol>
 {% endblock %}
 
 	
