--- a/templates/home/pages/terms.html
+++ b/templates/home/pages/terms.html
@@ -2,12 +2,101 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Terms - Sakkhat</title>
+	<title>Terms of service - Sakkhat</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/home/page/terms.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/generic/article.css'%}">
 {% endblock %}
 
 
 {% block extra_content %}
-	<h5 class="display-3 text-center">Will be updated</h5>
+	<h2 class="text-center">Terms of service</h2>
+
+	<div class="container-fluid">
+		<div class="row d-flex justify-content-center">
+			<div class="col-md-10">
+				<h5 class="title1" id="definition">Definition</h5>
+				<ol class="article-block">
+					<li class="article-body">The "Service" refers to the user account, space, post and services provided by Sakkhat</li>
+					<li class="article-body">"The User", "You", "Your" refer to the individual person, company or organization that has visited or using the Service; that access or uses any partof the Account; or that directs the use of the Account in the performance of its functions</li>
+					<li class="article-body">"Sakkhat", "We", "Us", "Our" refer to the Sakkhat Inc., as well as our affiliates, directors and employee.</li>
+					<li class="article-body">"Content" refers to content features or displayed through the Website, including limitation text, data, images, post, photograph, graphics, designs, features or other materials that are available on the Website or otherwise available through the Service. "Content" also includes Services. "User Generated Content" is Content, written or otherwise, created or uploaded by our Users. "Your Content" is Content that you create or own.</li>
+					<li class="article-body">An "Account" represents your legal relationship with Sakkhat. A "User Account" represents an individual User's authorization to log in to and use the Service and servers as a User's identity on Sakkhat.</li>
+					<li class="article-body">More definition are defined in <a href="/page/about/">About</a> section.</li>
+				</ol>
+
+				<h5 class="title1" id="Account-Terms">Account Terms</h5>
+				<ol class="article-block">
+					<li class="article-body">
+						<h6 class="title2">Control</h6>
+						You retain ultimate administrative control over your account and content within it.
+					</li>
+					<li class="article-body">
+						<h6 class="title2">Requirements</h6>
+						<ul>
+							<li class="article-body">You must provide a valid email address in order to complete the signup process. Any other information requested, such as your real name is optional</li>
+							<li class="article-body">Sakkhat will provide a single account for an email and a space for an account. Currently multiple account cannot manage a single space.</li>
+							<li class="article-body">You may not use Sakkhat in violation of export control or sanctions laws of the Repablic of Bangladesh</li>
+						</ul>
+					</li>
+					<li class="article-body">
+						<h6 class="title2">Security</h6>
+						You are responsible for keeping your account secure while you use our service. You are responsible for maintaining the security of your account and password. Sakkhat cannot and will not be liable for any loss or damage from failure to comply with this security oblifgation.
+					</li>
+				</ol>
+
+				<h5 class="title1" id="Acceptable-Use">Acceptable Use</h5>
+				<ol class="article-block">
+					<li class="article-body">
+						<h6 class="title2">Compliance with Laws and Regulations</h6>
+						Your use of the Website and Service must not violate any applicable laws, including copyright or trademark laws, export control or sanctions laws or other laws in your jurisdiction. You are responsible for making sure that your use of the Service is in compliance with laws and any applicable regulations.
+					</li>
+					<li class="article-body">
+						<h6 class="title2">Content Restrictions</h6>
+						You are agree that you will not under any circumstances upload, post, host or transmit any content that:
+						<ul>
+							<li class="article-body">is unlawful or promotes unlawful activities;</li>
+							<li class="article-body">is or contains sexually obscene content;</li>
+							<li class="article-body">is libelous, defamatory, or fraudulent;</li>
+							<li class="article-body">is discriminatory or abusive toward any individual or group;</li>
+							<li class="article-body">gratuitously depicts or glorifies violence, including violent images;</li>
+							<li class="article-body">infringes on any proprietary right of any party, including patent, trademark, trade secret, copyright, right of publicity, or other rights.</li>
+						</ul>
+					</li>
+					<li class="article-body">
+						<h6 class="title2">Conduct Restrictions</h6>
+						While using Sakkhat, you agree that you will not under any circumstances:
+						<ul>
+							<li class="article-body">Harass, abuse, threaten, or incite violence towards any individual or group, including Sakkhat employee, officers, directors or other Sakkhat Users;</li>
+							<li class="article-body">Use of our servers for any form of excessive automated bulk activity (for example, spamming) or relay any other form of unsolicited advertising or solicitations through our servers, such as get rich quick schemes;</li>
+							<li class="article-body">Violate the privacy of any third party, such as by posting another person's personal information without consent.</li>
+						</ul>
+					</li>
+					<li class="article-body">
+						<h6 class="title2">Services Usages Limits</h6>
+						You agree not reproduce, duplicate, copy, sell, resell or exploit any portion of the Service, use of the Service or access to the Service without Sakkhat's express written permission.
+					</li>
+					<li class="article-body">
+						<h6 class="title2">Privacy</h6>
+						Misuse of Sakkhat Users' Personal Information is prohibited.Any person, entity or service collecting data from Sakkhat must comply with the <a href="/page/privacy-policy/">Sakkhat Privacy Statement</a>, particularly in regards to the collection of our Users` Personal Information (as defined in the Sakkhat Privacy Statement)If you collect any Sakkhat User’s Personal Information from Sakkhat, you agree that you will only use the Personal Information you gather for the purpose for which our User has authorized it. You agree that you will reasonably secure any Personal Information you have gathered from Sakkhat, and you will respond promptly to complaints, removal requests, and “do not contact” requested from Sakkhat or Sakkhat Users.
+					</li>
+				</ol>
+
+				<h5 class="title1" id="Pricing">Pricing</h5>
+				<p class="article-body">Currently Sakkhat is in beta, so there will be no charge to use any service from us. Letter may be we charge for creating a single post on Sakkhat one time.</p>
+
+				<h5 class="title1" id="Content-Terms">Content Terms</h5>
+				<p class="article-body">The content posted, uploaded or created on Sakkhat by the Users is totally up to the owner. Sakkhat is not responsible for a product price, its quality and its existence. Sakkhat doesn't responsible for the activity of a Space.</p>
+
+				<h5 class="title1" id="Changes-to-these-terms">Changes to these terms</h5>
+				<p class="article-body">We want our users to be informed of important changes to our terms, but some changes aren't that important — we don't want to bother you every time we fix a typo. So while we may modify this agreement at any time, we will notify users of any changes that affect your rights and give you time to adjust to them.</p>
+
+				<h5 class="title1">Questions</h5><a href="/page/feedback/">Contact us</a>
+				<br><br>
+			</div>
+		</div>
+	</div>
+
+
 {% endblock %}
 
 	
