--- a/staticfiles/css/space/manage/update.css
+++ b/staticfiles/css/space/manage/update.css
@@ -17,3 +17,11 @@
 	position: absolute; display: none;
 	left: 50%; bottom: 30%; transform: translate(-50%, 0%);
 }
+
+.logo-container {
+	width: 260px; height: 260px; position: relative;
+	margin-left: auto; margin-right: auto;
+}
+#space-logo {
+	width: 100%; height: 100%; object-fit: cover; 
+}
