--- a/templates/home/pages/cookie.html
+++ b/templates/home/pages/cookie.html
@@ -3,11 +3,19 @@
 
 {% block extra_head %}
 	<title>Cookie - Sakkhat</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/home/page/cookie.css' %}">
 {% endblock %}
 
 
 {% block extra_content %}
-	<p>Sakkhat uses cookies to make interactions with our service easy and meaningful. We use cookies (and similar technologies, like HTML5 localStorage) to keep you logged in, remember your preferences, and provide information for future development of Sakkhat. For security reasons, we use cookies to identify a device. By using our website, you agree that we can place these types of cookies on your computer or device. If you </p>
+	<h2 class="text-center">Using of Cookies</h2>
+	<div class="container-fluid">
+		<div class="row d-flex justify-content-center">
+			<div class="col-md-10">
+				<p class="block-text">Sakkhat uses cookies to make interactions with our service easy and meaningful. We use cookies (and similar technologies, like HTML5 localStorage) to keep you logged in, remember your preferences. By using our website, you agree that we can place these types of cookies on your computer or device. </p>
+			</div>
+		</div>
+	</div>
 {% endblock %}
 
 	
