--- a/templates/home/pages/privacy_policy.html
+++ b/templates/home/pages/privacy_policy.html
@@ -9,7 +9,10 @@
 
 
 {% block extra_content %}
-	<h2 class="text-center">Privacy Policy</h2>
+	<div class="container-fluid">
+		<div class="row d-flex justify-content-center">
+			<div class="col-md-10">
+				<h2 class="text-center">Privacy Policy</h2>
 	<h4 class="mb-3">What information Sakkhat collects and why</h4>
 	<ol>
 		<li>
@@ -25,6 +28,9 @@
 			<h5 class="title-1">Tracking and analytics</h5><p class="article-body">We use a number of third party analytics and service providers to help us evaluate our users' use of Sakkhat; compile statistical reports on activity; and improve our content and website performance. We only use these third party analytics providers on certain areas of our website, and all of them have signed data protection agreements with us that limit the type of personal information they can collect and the purpose for which they can process the information. In addition, we use our own internal analytics software to provide features and improve our content and performance.</p>
 		</li>
 	</ol>
+			</div>
+		</div>
+	</div>
 {% endblock %}
 
 	
