--- a/templates/home/manage/index.html
+++ b/templates/home/manage/index.html
@@ -76,7 +76,7 @@
                                     </button>
                                 </div>
                             </figcaption>
-                            <a href="/space/product/{{product.uid}}/"></a>
+                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
                         </figure>
                     </div>
                 {% endfor %}
@@ -109,7 +109,7 @@
                                     </button>
                                 </div>
                             </figcaption>
-                            <a href="/space/product/{{product.uid}}/"></a>
+                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
                         </figure>
                     </div>
                 {% endfor %}
@@ -142,7 +142,7 @@
                                     </button>
                                 </div>
                             </figcaption>
-                            <a href="/space/product/{{product.uid}}/"></a>
+                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
                         </figure>
                     </div>
                 {% endfor %}
@@ -175,7 +175,7 @@
                                     </button>
                                 </div>
                             </figcaption>
-                            <a href="/space/product/{{product.uid}}/"></a>
+                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
                         </figure>
                     </div>
                 {% endfor %}
@@ -208,7 +208,7 @@
                                     </button>
                                 </div>
                             </figcaption>
-                            <a href="/space/product/{{product.uid}}/"></a>
+                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
                         </figure>
                     </div>
                 {% endfor %}
@@ -236,7 +236,7 @@
                                     <h6 class="activity">Rating <span class="activity-counter">{{item.rating}}</span></h6>
                                 </div>
                                 <div class="space-link">
-                                    <a href="/space/{{item.space__name}}" class="btn btn-light btn-sm">Visit</a>
+                                    <a href="/{{item.space__name}}/" class="btn btn-light btn-sm">Visit</a>
                                 </div>
                             </div>
                         </div>
