--- a/templates/space/product/single.html
+++ b/templates/space/product/single.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="{{product.title}}">
     <meta property="og:description" content="{{product.category}}">
     <meta property="og:image" content="">
-    <meta property="og:url" content="{{current_site.domain}}">
+    <meta property="og:url" content="">
 
     <title>{{ product.title }} | {{ product.space.name }}</title>
 
@@ -64,11 +64,11 @@
                       (out of stock)
                     {% endif %}
                 </h5>
-                <a class="list-group-item bg-light" href="/space/{{product.space.name}}/">@{{ product.space.name }}</a>
+                <a class="list-group-item bg-light" href="/{{product.space.name}}/">@{{ product.space.name }}</a>
                 <div class="list-group-item">
                     <a class="btn btn-sm btn-outline-dark" href="/space/product/all/?category={{product.category}}">{{ product.category }}</a>
                     <div class="float-right">
-                        <iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Fsakkhat.in%2F&layout=button&size=large&width=73&height=28&appId=" width="73" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&appId=1320512341429071&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <div class="list-group-item description">
@@ -154,7 +154,7 @@
                                     </button>
                                 </div>
                             </figcaption>
-                            <a href="/space/product/{{product.uid}}/"></a>
+                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
                         </figure>
                     {% endfor %}
                 </div>
